feature/Transformador-Basico, funcionamento de botao

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,33 @@
     
 <h1>Transformador de trancode</h1>
 
-<div class="tableLocation">
+<label for="books">Escolha o book:</label>
 
+<div class="selectLocation">
 </div>
 
-<p></p>
-	
+
+<div>
+  <p>Exemplo: <br> <b class="example">AA</b></p>
+</div>
+
+
+<textarea class="trancodeTextarea" rows="10" cols="100">
+</textarea>
+
+<div>
+  <button type="button" class="transformarBotao">Transformar</button>
+</div>
+
+
+<div class="tableLocation">
+</div>
 
 </body>
   <script src='js/book/BOOK_0.js'></script>
   <script src='js/book/BOOK_01.js'></script>
+  <script src='js/book/BOOK_ARRAY.js'></script>
+  <script src='js/selectGenerator.js'></script>
   <script src='js/tableGenerator.js'></script>
   <script src='js/trancodeConverter.js'></script>
   <script src='js/index.js'></script>
