feat(Transformador-Basico): correções e melhorias

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
 
 <div>
-  <p>Exemplo: <br> <b class="example">AA</b></p>
+  <p>Exemplo: <br> <textarea rows="1" cols="100" class="example" disabled></textarea></p>
 </div>
 
 
