feature/Transformador-List, adicao de novo book

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 </body>
   <script src='js/book/BOOK_0.js'></script>
   <script src='js/book/BOOK_01.js'></script>
+  <script src='js/book/BOOK_02_LIST.js'></script>
   <script src='js/book/BOOK_ARRAY.js'></script>
   <script src='js/selectGenerator.js'></script>
   <script src='js/tableGenerator.js'></script>
