navbar no index.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/index.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/sidebar.css'>
 </head>
 <body>
+
+<ul>
+    <li><a href="index.html">Transformador de trancode</a></li>
+    <li><a href="createBook.html">Gerar Book</a></li>
+  </ul>
     
 <h1>Transformador de trancode</h1>
 
